# netmon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  netmon.py  netmon_tui.py  pyproject.toml  requirements.txt
docs/: MITIGATIONS.md  RUNBOOK.md
docs/adr/: 0001-reopen-cert-san-scope.md
docs/prd/audit-hardening/: 00-PRD-audit-hardening.md  01-tcp-reassembler-overlap.md  02-reassembler-lru-eviction.md  03-multi-record-clienthello.md  04-refresh-local-addresses.md  05-raw-pcap-evidence-sink.md  06-netmon-query.md  07-tls12-cert-san-fallback.md  08-output-rotation.md  09-systemd-sandboxing.md  10-tunnel-non-ethernet.md  11-cli-ops-test-coverage.md
docs/prd/capture-gaps/: 00-PRD-capture-gaps.md  01-dns-response-outcomes.md  02-dns-authority-additional.md  03-dns-over-tcp-reassembler.md  04-framing-based-quic.md  05-llmnr-nbns.md  06-dns-nonstandard-ports.md  07-icmpv6-router-advertisement.md  08-arp-host-discovery.md
docs/prd/operator-ergonomics/: 00-PRD-operator-ergonomics.md  01-requirements-txt.md  02-update-without-uv.md  03-install-without-uv.md  04-total-event-projections.md  05-event-filter.md  06-filter-bar.md  07-leak-findings.md  08-leaks-panel.md  09-netmon-audit.md  10-csv-export.md
tests/: conftest.py  test_clipboard.py  test_netmon.py  test_packaging.py  test_tui.py
